# gridSim

./: .gitignore  README.md  build_doc.sh  build_simulator.sh  build_simulator_parallel.sh
cnf/: bat_example.xml  cnf_example.xml  cnf_sigmaplantas.xml  isfoc_ac_arima_cnf.xml  isfoc_ac_hirlam_cnf.xml  isfoc_ac_ideal_cnf.xml  isfoc_ac_nofc_cnf.xml  isfoc_ac_persis_cnf.xml  isfoc_bc_cnf.xml  mufco_demo.xml  noControl_example.xml  parallel_example.xml  pv_demo.xml  swarmgrid_demo.xml
cnf_parallel/: isfoc_ac_arima_bat_scn.xml  isfoc_ac_arima_pv_scn.xml  isfoc_ac_hirlam_bat_scn.xml  isfoc_ac_hirlam_pv_scn.xml  isfoc_ac_ideal_bat_scn.xml  isfoc_ac_ideal_pv_scn.xml  isfoc_ac_nofc_bat_scn.xml  isfoc_ac_nofc_pv_scn.xml  isfoc_ac_persis_bat_scn.xml  isfoc_ac_persis_pv_scn.xml  isfoc_ac_prm_scn.xml  isfoc_bc_bat_scn.xml  isfoc_bc_prm_scn.xml  isfoc_bc_pv_scn.xml
data/: PERFF_2013  Pcpv_2013_arima.txt  Pcpv_2013_autumn.txt  Pcpv_2013_hirlam.txt  Pcpv_2013_ideal.txt  Pcpv_2013_persis.txt  Pcpv_2013_spring.txt  Pcpv_2013_summer.txt  Pcpv_2013_winter.txt  Ta_2013_autumn.txt  Ta_2013_ideal.txt  Ta_2013_spring.txt  Ta_2013_summer.txt  Ta_2013_winter.txt  arima_forecast  hirlam_forecast  ideal_forecast  persis_forecast  pv_ideal_profile  pv_spain_gen_year
data/def_load_profiles/: DR_RP_1200  DW_RP  WM_60_1200  cooker  fridge  typical_weekend_house
data/pv_profiles/: G_ARIMA_CR2010_010011  G_ARIMA_Cac2010_011011  G_ARIMA_Log2010_010011  G_ARIMA_Mad2010_011011  G_ARIMA_San2010_011011  G_ARIMA_Sor2010_010011  G_med_CR_2010  G_med_Cac_2010  G_med_Log_2010  G_med_Mad_2010  G_med_San_2010  G_med_Sor_2010  arima_forecast  persis_forecast
doc/manual_latex/: description.tex  examples.tex  execution.tex  gridsim_manual.tex  installation.tex  makefile  tech_manual.sty
doc/manual_latex/figs/: gridsim_sch.eps
scripts/: isfoc_ac_arima_bat.sh  isfoc_ac_arima_pv.sh  isfoc_ac_hirlam_bat.sh  isfoc_ac_hirlam_pv.sh  isfoc_ac_ideal_bat.sh  isfoc_ac_ideal_pv.sh  isfoc_ac_nofc_bat.sh  isfoc_ac_nofc_pv.sh  isfoc_ac_persis_bat.sh  isfoc_ac_persis_pv.sh  isfoc_ac_prm.sh  isfoc_bc_bat.sh  isfoc_bc_prm.sh  isfoc_bc_pv.sh
src/: Makefile.am  configure.ac  main.cpp
src/common/: Makefile.am  common.cpp  common.h  datatypes.h  fft.cpp  fft.h  random.cpp  random.h
src/graphics_engine/: CImg.h  Makefile.am  plotter.cpp  plotter.h
src/parallel/: Makefile.am  configure.ac  main.cpp
src/simulator/: Makefile.am  simulator.cpp  simulator.h
src/simulator/controllers/: ADSM_ctr.cpp  ADSM_ctr.h  Makefile.am  bat_ctr.cpp  bat_ctr.h  controller.cpp  controller.h  controller_list.cpp  controller_list.h  controllers_list.h  isfoc_ctr.cpp  isfoc_ctr.h  mufco_ctr.cpp  mufco_ctr.h  swarmgrid_ctr.cpp  swarmgrid_ctr.h
src/simulator/elements/: Makefile.am
src/simulator/elements/consumption/: airconditioner.cpp  airconditioner.h  deferrable_load.cpp  deferrable_load.h  load.cpp  load.h
src/simulator/elements/generation/: PV.cpp  PV.h  PVmodel.cpp  PVmodel.h
src/simulator/elements/line/: regulator.h  switch.h
src/simulator/elements/storage/: batinverter.cpp  batinverter.h  lead-acid.cpp  lead-acid.h  storage.cpp  storage.h
src/simulator/grid/: Makefile.am  grid.cpp  grid.h  line.cpp  line.h  node.cpp  node.h
src/simulator/main_control/: Makefile.am  default_mc.cpp  default_mc.h  isfoc_eval.cpp  isfoc_eval.h  isfoc_seasons_eval.cpp  isfoc_seasons_eval.h  local_mc.cpp  local_mc.h  main_control.cpp  main_control.h  main_control_list.cpp  main_control_list.h  mufco_demo.cpp  mufco_demo.h  mufco_mc.cpp  mufco_mc.h  swarmgrid_demo.cpp  swarmgrid_demo.h  swarmgrid_mc.cpp  swarmgrid_mc.h
src/simulator/user/: Makefile.am  user.cpp  user.h
