CPPFLAGS                  = -I../../../src -I../../../src/common -I../../../src/simulator
lib_LTLIBRARIES           = libcontrollers.la
libcontrollers_la_SOURCES = ../../../src/simulator/controllers/controller.cpp \
			    ../../../src/simulator/controllers/controller_list.cpp \
			    ../../../src/simulator/controllers/bat_ctr.cpp




			    
