CPPFLAGS               = -I../../../src -I../../../src/common
noinst_LTLIBRARIES     = libelements.la
libelements_la_SOURCES = ../../../src/simulator/elements/generation/PV.cpp \
			 ../../../src/simulator/elements/storage/lead-acid.cpp \
			 ../../../src/simulator/elements/storage/batinverter.cpp \
			 ../../../src/simulator/elements/storage/storage.cpp \
			 ../../../src/simulator/elements/consumption/load.cpp \
			 ../../../src/simulator/elements/consumption/airconditioner.cpp
