CPPFLAGS           = -I../../../src -I../../../src/common -I../../../src/simulator
lib_LTLIBRARIES    = libgrid.la
libgrid_la_SOURCES = ../../../src/simulator/grid/node.cpp \
		     ../../../src/simulator/grid/line.cpp \
		     ../../../src/simulator/grid/grid.cpp
libgrid_la_LIBADD  = ../../common/libcommon.la
