CPPFLAGS                   = -I../../../src -I../../../src/common -I../../../src/simulator
lib_LTLIBRARIES            = libmain_control.la
libmain_control_la_SOURCES = ../../../src/simulator/main_control/main_control.cpp \
			     ../../../src/simulator/main_control/main_control_list.cpp \
			     ../../../src/simulator/main_control/isfoc_eval.cpp \
			     ../../../src/simulator/main_control/default_mc.cpp


			    
